Update PDF and log files

--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -54,19 +54,24 @@ A partire dal 19° livello, con un'azione l'utilizzatore può lanciare l'incante
 Questo privilegio può essere usato una volta per riposo lungo.
 
 \subsection{Quaderno del Demiurgo}
-\textit{Quaderno (artefatto) meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione}
+\textit{Quaderno (artefatto) meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione o un Warlock del Benefattore Temporale}
+
+\subsubsection{}
 
 \subsection{Prigione fluida di Absynthe}
-\textit{Arma simbiotica (artefatto) meravigliosa leggendaria, richiede sintonia con un Warlock della Lama del Sortilegio o un Paladino del Giuramento di Vendetta}
+\textit{Arma simbiotica (artefatto) leggendaria, richiede sintonia con un Warlock della Lama del Sortilegio o un Paladino del Giuramento di Vendetta}
 
 \subsection{Borsa degli arnesi stupefacenti di Skardy}
-\textit{Borsa di strumenti (artefatto) meravigliosa leggendaria, richiede sintonia con un Druido del Circolo della Luna}
+\textit{Borsa di oggetti (artefatto) meravigliosi leggendari, richiede sintonia con un Druido del Circolo della Luna}
 
 \subsection{Sintetizzatore d'Ebano di Tauriel Halamis}
-\textit{Strumento musicale (artefatto) meraviglioso leggendario, richiede sintonia con un Warlock del Signore dell'Assurdo}
+\textit{Anello (artefatto) leggendario, richiede sintonia con un Warlock del Signore dell'Assurdo}
+
+\subsubsection{Sintesi assoluta}
+A partire dal 1° livello, l'utilizzatore può far prendere all'anello la forma di un qualsiasi strumento musicale (di dimensioni contenute) in Ebano, paragonabile a uno strumento "vero" di ottima fattura.\\ Quando è in questa forma, l'utilizzatore può usarlo come focus per i suoi incantesimi da Warlock.\\ Finchè è in sintonia con questo oggetto, l'utilizzatore è competente nell'uso di qualsiasi strumento musicale, anche quelli in cui l'anello non è in grado di trasformarsi (ad esempio, un organo a canne).
 
 \subsection{Scudo della Lealtà di Artorias}
-\textit{Amuleto (artefatto) meraviglioso leggendario, richiede sintonia con un Guerriero in grado di trasformarsi in un Lupo}
+\textit{Amuleto (artefatto) leggendario, richiede sintonia con un Guerriero in grado di trasformarsi in un Lupo}
 
 \section{Oggetti non legati ai personaggi dei giocatori}
 
