Update PDF files and log files

--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -54,9 +54,36 @@ A partire dal 19° livello, con un'azione l'utilizzatore può lanciare l'incante
 Questo privilegio può essere usato una volta per riposo lungo.
 
 \subsection{Quaderno del Demiurgo}
-\textit{Quaderno (artefatto) meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione o un Warlock del Benefattore Temporale}
+\textit{Quaderno (artefatto) meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione o un Warlock del Benefattore Temporale}\\
+Un quaderno che pare avere un numero illimitato di pagine, di qualsiasi colore.
+Staccandone una pagina e realizzando un origami esso acquisisce certe caratteristiche magiche.
 
-\subsubsection{}
+\subsubsection{Origami}
+A partire dal 1° livello, l'utilizzatore può staccare una pagina per realizzare un origami magico. La realizzazione di un origami, in base alla sua complessità, può richiedere tra un minuto e una mezzora.\\
+Quando l'utilizzatore realizza l'origami di una creatura con Grado Sfida minore o uguale al suo bonus di competenza, può lanciare l'incantesimo \textit{Trova Famiglio} e animarlo in modo da usarlo come famiglio.\\
+Il famiglio ha punti ferita massimi pari al livello dell'utilizzatore. Quando scende a 0 punti ferita, l'origami viene distrutto.\\
+Quando l'origami viene distrutto o l'utilizzatore decide di farlo tornare un normale origami, può riutilizzare questo privilegio.
+
+\subsubsection{Segreti e segrete}
+Moltissime strutture a Eovras hanno un leggio di pietra davanti alla loro entrata.\\
+A partire dal 1° livello, se l'utilizzatore appoggia il quaderno aperto su questo leggio, sulla pagina aperta verrà disegnata magicamente una mappa della struttura, che segnerà in tempo reale la posizione del quaderno fintanto che questo si troverà al suo interno.
+
+\subsubsection{Fogli a millemila}
+A partire dal 4° livello, come parte della creazione di un origami, l'utilizzatore può alterarne la taglia da minuscolo a enorme. Successivamente, può usare un'azione per toccarlo e alterarla ulteriormente.
+
+\subsubsection{L'inchiostro è più denso del sangue}
+A partire dall'8° livello, quando l'utilizzatore crea un origami come famiglio può trasformarlo in una creatura in carne ed ossa.\\
+Quando questa scende a 0 punti ferita o viene congedata, torna a essere un origami.
+
+\subsubsection{Cartapentiere}
+A partire dal 12° livello, l'utilizzatore può usare un origami per usare una seconda volta il privilegio del Collegio della Creazione \textit{Compimento della Creazione}.
+
+\subsubsection{Animato a mano}
+A partire dal 16° livello, l'utilizzatore può usare il quaderno per usare su due oggetti il privilegio del Collegio della Creazione \textit{Creazione Animata} e usare la stessa azione bonus per impartire ordini diversi a ciascuno.
+
+\subsubsection{Iperrealismo}
+A partire dal 19° livello, quando l'utilizzatore realizza un origami che rappresenta un oggetto inanimato, può usarlo per lanciare l'incantesimo \textit{Immagine Maggiore}. In questo caso, l'oggetto può essere di dimensione fino a Gargantuesca.\\
+Se nessun essere senziente svela l'illusione e il Bardo mantiene concentrazione per una durata pari a un'ora per ogni grado di dimensione, (minuscolo o meno: un'ora, piccolo: due ore, e così via) l'oggetto smette di essere un'illusione e diventa reale.
 
 \subsection{Prigione fluida di Absynthe}
 \textit{Arma simbiotica (artefatto) leggendaria, richiede sintonia con un Warlock della Lama del Sortilegio o un Paladino del Giuramento di Vendetta}
@@ -74,6 +101,40 @@ A partire dal 1° livello, l'utilizzatore può far prendere all'anello la forma 
 \textit{Amuleto (artefatto) leggendario, richiede sintonia con un Guerriero in grado di trasformarsi in un Lupo}
 
 \section{Oggetti non legati ai personaggi dei giocatori}
+
+\subsection{Errori di battitura}
+Esiste tutta una classe di oggetti magici che nascono quando il DM fa qualche errore di battitura. Ne incontrerete molti, e verranno tutti messi qui.
+
+\subsubsection{Alabarba}
+\textit{Arma magica comune}\\
+Quando un personaggio impugna l'Alabarba, gli cresce istantaneamente una barba. Se questi possiede già una barba, a questa crescerà un'altra barba. Se il personaggio smette di impugnare l'Alabarba, la barba sparisce istantaneamente. Finchè impugna l'Alabarba, il personaggio ha un bonus di +1 alle prove di Carisma.\\
+L'Alabarba è assolutamente indistinguibile da un'alabarda normale. Qualsiasi alabarda quando viene fabbricata ha una piccola possibilità (1\%) di diventare un'Alabarba.
+
+\subsection{Frattura}
+\textit{Pugnale magico (+0, 1d6 danni magici taglienti) che richiede sintonia con un Ladro, la sua potenza dipende dal livello del Ladro, oggetto meraviglioso, leggendario}
+
+\subsubsection{Squarcio dimensionale}
+A partire dal 1° livello, l'utilizzatore può usare un'azione bonus per tagliare lo spazio e aprire un portale di circa 30 cm di raggio per un punto entro 9m che è sia grado di vedere. Può attaccare attraverso questo portale, che si richiude alla fine del suo turno.
+
+\subsubsection{Fenditura silenziosa}
+A partire dal 4° livello, l'utilizzatore quando usa \textit{Squarcio dimensionale} può scegliere una creatura che sia in grado di vedere ed effettuare una prova di caratteristica di Destrezza (Furtività) contro la sua percezione passiva. Se la supera, il portale si apre dietro la creatura (che ne è inconsapevole) e il prossimo attacco effettuato attraverso di esso ha vantaggio.
+
+\subsubsection{Strappo duraturo}
+A partire dall'8° livello, i portali aperti con \textit{Squarcio dimensionale} permangono per un'ora, o fino a che l'utilizzatore non li chiude con un'azione bonus o usa di nuovo \textit{Squarcio dimensionale} per aprirne un altro.
+
+\subsubsection{Gringott}
+A partire dal 10° livello, l'utilizzatore può usare \textit{Squarcio dimensionale} per lanciare l'incantesimo \textit{Semipiano}. Il portale si apre ogni volta su un semipiano di nome "Gringott", legato al pugnale. Solo creature in sintonia con Frattura possono accedere a Gringott lanciando l'incantesimo \textit{Semipiano}.
+
+\subsubsection{Espansione immobiliare}
+A partire dal 12° livello, quando l'utilizzatore scopre un oggetto a cui è legato un semipiano, può usare la sua azione per effettuare una prova di caratteristica di Destrezza (Rapidità di mano) contro la CD per il TS contro gli incantesimi dell'incantatore che ha creato il semipiano.\\
+Se ha successo, il semipiano diventa parte di Gringott. Una porta per esso appare su uno dei muri di Gringott scelto dall'incantatore. Se Gringott è già composta da diversi semipiani, la porta può apparire in uno qualsiasi di essi. L'utilizzatore può riarrangiare la struttura dei semipiani di Gringott a suo piacimento.\\
+L'oggetto da cui è stato sottratto il semipiano mantiene le sue proprietà di porta per esso per un ultimo viaggio, dopodichè perde queste proprietà magiche, ma non viene distrutto e mantiene le altre, se ne aveva.
+
+\subsubsection{Fendispazio}
+A partire dal 16° livello, i danni di Frattura aumentano a 2d6 e \textit{Squarcio dimensionale} può essere usato per lanciare l'incantesimo \textit{Portale} verso una destinazione sullo stesso piano di esistenza.
+
+\subsubsection{Fendispazio interplanare}
+A partire dal 19° livello, \textit{Squarcio dimensionale} può essere usato per lanciare l'incantesimo \textit{Portale} senza limitazioni.
 
 \subsection{Guanti del CleptoMana}
 \textit{Richiede sintonia con un Warlock} 
@@ -106,37 +167,3 @@ Come azione, l'indossatore può toccare due volte l'anello e teletrasportarsi ne
 
 \subsubsection{Stereoscopia}
 Se i due anelli sono indossati da persone diverse, come azione l'indossatore dell'occhio destro può girare l'anello sul dito e percepire il mondo dalla prospettiva dell'indossatore dell'occhio sinistro, non importa dove esso si trovi. A sua volta, l'indossatore dell'occhio sinistro può usare la sua azione per teletrasportarsi nell'ombra dell'indossatore dell'occhio destro. \\ Usare questo privilegio conta come un utilizzo. Se uno dei due anelli sta venendo utilizzato, l'altro indossatore ne è a conoscenza.
-
-\subsection{Frattura}
-\textit{Pugnale magico (+0, 1d6 danni magici taglienti) che richiede sintonia con un Ladro, la sua potenza dipende dal livello del Ladro, oggetto meraviglioso, leggendario}
-
-\subsubsection{Squarcio dimensionale}
-A partire dal 1° livello, l'utilizzatore può usare un'azione bonus per tagliare lo spazio e aprire un portale di circa 30 cm di raggio per un punto entro 9m che è sia grado di vedere. Può attaccare attraverso questo portale, che si richiude alla fine del suo turno.
-
-\subsubsection{Fenditura silenziosa}
-A partire dal 4° livello, l'utilizzatore quando usa \textit{Squarcio dimensionale} può scegliere una creatura che sia in grado di vedere ed effettuare una prova di caratteristica di Destrezza (Furtività) contro la sua percezione passiva. Se la supera, il portale si apre dietro la creatura (che ne è inconsapevole) e il prossimo attacco effettuato attraverso di esso ha vantaggio.
-
-\subsubsection{Strappo duraturo}
-A partire dall'8° livello, i portali aperti con \textit{Squarcio dimensionale} permangono per un'ora, o fino a che l'utilizzatore non li chiude con un'azione bonus o usa di nuovo \textit{Squarcio dimensionale} per aprirne un altro.
-
-\subsubsection{Gringott}
-A partire dal 10° livello, l'utilizzatore può usare \textit{Squarcio dimensionale} per lanciare l'incantesimo \textit{Semipiano}. Il portale si apre ogni volta su un semipiano di nome "Gringott", legato al pugnale. Solo creature in sintonia con Frattura possono accedere a Gringott lanciando l'incantesimo \textit{Semipiano}.
-
-\subsubsection{Espansione immobiliare}
-A partire dal 12° livello, quando l'utilizzatore scopre un oggetto a cui è legato un semipiano, può usare la sua azione per effettuare una prova di caratteristica di Destrezza (Rapidità di mano) contro la CD per il TS contro gli incantesimi dell'incantatore che ha creato il semipiano.\\
-Se ha successo, il semipiano diventa parte di Gringott. Una porta per esso appare su uno dei muri di Gringott scelto dall'incantatore. Se Gringott è già composta da diversi semipiani, la porta può apparire in uno qualsiasi di essi. L'utilizzatore può riarrangiare la struttura dei semipiani di Gringott a suo piacimento.\\
-L'oggetto da cui è stato sottratto il semipiano mantiene le sue proprietà di porta per esso per un ultimo viaggio, dopodichè perde queste proprietà magiche, ma non viene distrutto e mantiene le altre, se ne aveva.
-
-\subsubsection{Fendispazio}
-A partire dal 16° livello, i danni di Frattura aumentano a 2d6 e \textit{Squarcio dimensionale} può essere usato per lanciare l'incantesimo \textit{Portale} verso una destinazione sullo stesso piano di esistenza.
-
-\subsubsection{Fendispazio interplanare}
-A partire dal 19° livello, \textit{Squarcio dimensionale} può essere usato per lanciare l'incantesimo \textit{Portale} senza limitazioni.
-
-\subsection{Errori di battitura}
-Esiste tutta una classe di oggetti magici che nascono quando il DM fa qualche errore di battitura. Ne incontrerete molti, e verranno tutti messi qui.
-
-\subsubsection{Alabarba}
-\textit{Arma magica comune}\\
-Quando un personaggio impugna l'Alabarba, gli cresce istantaneamente una barba. Se questi possiede già una barba, a questa crescerà un'altra barba. Se il personaggio smette di impugnare l'Alabarba, la barba sparisce istantaneamente. Finchè impugna l'Alabarba, il personaggio ha un bonus di +1 alle prove di Carisma.\\
-L'Alabarba è assolutamente indistinguibile da un'alabarda normale. Qualsiasi alabarda quando viene fabbricata ha una piccola possibilità (1\%) di diventare un'Alabarba.
