Update timestamps and fix typos in log and tex files

--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -154,10 +154,10 @@ Un numero di volte pari a metà del suo bonus di competenza per riposo lungo, l'
 Una volta per riposo lungo, l'incantatore può scegliere un altro incantatore che sia in grado di vedere e impadronirsi di un suo slot di 6° livello o superiore, convertendolo in uno slot di 5° livello. \\ Se il bersaglio non possiede slot di 6° livello o superiore, i guanti non hanno alcun effetto e sia l'azione che l'utilizzo sono considerati utilizzati.
 
 \subsection{Occhi di Omatara}
-\textit{Coppia di anelli che richiedono sintonia con due incantatori diversi contemporaneamente}
+\textit{Coppia di anelli leggendari, richiedono sintonia con due incantatori diversi contemporaneamente}
 
 \subsubsection{Sotto lo sguardo della morte}
-Anelli magici leggendari, la cui favola narra siano stati concessi da Omatara, dea della morte, a due incantatori fratelli che riuscirono a ingannarla. \\ Sempre secondo la leggenda, se un incantatore solo dovesse indossarli entrambi, Omatara in persona si preoccuperebbe di provvedere a dargli una morte rapida e fatidica, ma si tratta solo di una leggenda… vero? 
+Anelli magici la cui favola narra siano stati concessi da Omatara, dea della morte, a due incantatori fratelli che riuscirono a ingannarla. \\ Sempre secondo la leggenda, se un incantatore solo dovesse indossarli entrambi, Omatara in persona si preoccuperebbe di provvedere a dargli una morte rapida e fatidica, ma si tratta solo di una leggenda… vero? 
 
 \subsubsection{L'occhio sinistro}
 Come azione bonus, l'indossatore può scegliere una creatura senziente che sia in grado di vedere. \\ Per i prossimi 6 secondi, l'indossatore può percepire il mondo dagli occhi di quella creatura e controllarne lo sguardo. La creatura deve effettuare un TS su saggezza con CD 16; se lo fallisce, è accecata durante l'effetto di questo oggetto; L'incantatore può decidere di usare questo effetto senza accecare. \\ Questo privilegio può essere usato un numero di volte pari al bonus di competenza dell'indossatore per riposo breve. La creatura influenzata non può sapere da chi sta venendo influenzata.
