Update PDF and log files

--- a/data/Personaggi/Sapiente.tex
+++ b/data/Personaggi/Sapiente.tex
@@ -75,7 +75,7 @@ I privilegi ottenuti dal Sapiente a ogni livello sono riassunti in questa tabell
 \end{DndReadAloud}
 
 \subsection{Attenta Analisi}
-Il Sapiente può rapidamente analizzare un nemico. A partire dal 1° livello, un numero di volte pari al proprio bonusi di competenza ogni riposo breve, può usare un'azione bonus per analizzare una creatura che puoi vedere entro 18 metri, designandola come suo Mark. Finché si concentra sul suo Mark, come se si stesse concentrando su un incantesimo, il Sapiente ottiene i seguenti benefici:
+Il Sapiente può rapidamente analizzare un nemico. A partire dal 1° livello, un numero di volte pari al proprio bonus di di competenza più il suo modificatore di intelligenza ogni riposo breve, può usare un'azione bonus per analizzare una creatura che è in grado di vedere entro 18 metri, designandola come suo Mark. Finché si concentra sul suo Mark, come se si stesse concentrando su un incantesimo, il Sapiente ottiene i seguenti benefici:
 \begin{itemize}
 \item quando colpisce il Mark con un attacco o lo osserva per 1 minuto, può apprendere una delle seguenti caratteristiche a sua scelta: punteggio di caratteristica più alto, punteggio di caratteristica più basso, Classe Armatura, velocità, punti ferita massimi o tipo di creatura.
 \item può usare Intelligenza, al posto di Forza o Destrezza, per i tiri per colpire e per i danni contro il Mark.
@@ -140,3 +140,70 @@ Una volta utilizzato questo privilegio, non può essere usato di nuovo finché n
 Il Sapiente realizza il proprio vero potenziale di genio. Al 20° livello, il suo punteggio di intelligenza aumenta di 4, fino ad un massimo di 24. Inoltre, quando tira il proprio Dado Intelletto e ottiene un risultato minore del proprio modificatore di Intelligenza, può sostituire al valore ottenuto il proprio modificatore di Intelligenza.
 
 \subsection{Ambiti di Ricerca}
+
+\subsubsection{Agricoltura}
+Il Sapiente ha un grande interesse in tutto ciò che cresce. Ogni volta che fa una prova di Intelligenza (Natura) relativamente a piante, fattorie, agricoltura, o giardinaggio, ha vantaggio in quel tiro. \\
+Inoltre, se spende 8 ore a prendersi cura di colture, piante o campi, la versione di 8 ore dell'incantesimo \textit{Crescita Vegetale} ha effetto su ogni coltura egli decida di accudire in quel periodo.
+
+\subsubsection{Astrologia}
+Il Sapiente è un esperto studioso delle mappe stellari e delle costellazioni, e può usare i movimenti dei corpi celesti per prevedere il futuro. Durante un riposo lungo in cui può vedere il cielo, può tirare un d20 e annotarne il valore. Può rimpiazzare un suo tiro per colpire, un suo tiro salvezza o una sua prova di abilità a sua scelta con questo valore, prima di aver effettuato tale tiro.\\
+La sostituzione può essere effettuata al massimo una volta, e se non viene utilizzata entro la fine del riposo lungo successivo, è persa.
+
+\subsubsection{Enigmi}
+Il Sapiente ha speso molto tempo a riflettere e ragionare su enigmi e rime. Quando parla, può scegliere di farlo in Enigmi. Quando lo fa, sembra di star parlando normalmente, ma ci sono dei messaggi nascosti nelle sue parole. \\
+In un'ora, che può trascorrere in un riposo breve o lungo, il Sapiente può insegnare ad una creatura a comprendere gli Enigmi. Una creatura con intelligenza pari o superiore a 13 che comprende gli Enigmi, può rispondere per Enigmi.
+
+\subsubsection{Equitazione}
+Il Sapiente ha sviluppato un grande amore per la cura dei cavalli. Il Sapiente ottiene competenza in Addestrare Animali. Ogni volta egli compie una prova di Saggezza (Addestrare Animali), può fare invece un tiro su Intelligenza (Addestrare Animali).\\
+Inoltre, quando fa una prova su Addestrare Animali relativamente a prendersi cura di un cavallo, cavalcarlo o far riprodurre dei cavalli, ha vantaggio su quel tiro.\\
+Infine, quando sta cavalcando un cavallo, aggiunge il proprio modificatore di Intelligenza ad ogni prova di abilità o tiro salvezza compiuto dalla cavalcatura.
+
+\subsubsection{Falconeria}
+Il Sapiente ha speso molti mesi ad imparare ad addestrare i rapaci. Ottiene un compagno Falco, che usa le statistiche del'Aquila Gigante del \textit{Manuale dei Mostri}, ma ha una statistica di Intelligenza di 14. Il Sapiente e il Falco possono comunicare usando gesti e suoni. Il falco è cecamente fedele al Sapiente e obbedisce ai suoi comandi.\\
+In combattimento, il Falco condivide l'iniziativa del Sapiente e agisce nel suo turno. Può muoversi e usare la sua reazione in modo indipendente, ma può compiere solo l'azione Schivata a meno che il Sapiente non usi una propria azione bonus per ordinargli di compiere un'azione dal proprio stat block, o un'altra azione. Se il Sapiente è incapacitato, il Falco agisce autonomamente.\\
+Se il Falco scende a 0 punti ferita, compie i tiri salvezza contro morte come farebbe un giocatore. In caso morisse, le abilità del Sapiente gli permettono di catturare e addomesticare un altro falco impiegandoci 8 ore di lavoro e spendendo 5 mo in esche.
+
+\subsubsection{Gioielliere}
+Il Sapiente è un apprendista orafo. Ottiene competenza in due strumenti da gioielliere, e il suo bonus di competenza raddoppia ai fini di ogni tiro che li utilizzi.\\
+Inoltre, quando è alla luce del sole, può spendere un''ora usando strumenti da gioielliere per modificare  una gemma che egli possa toccare in modo che assorba la luce solare.\\ Come azione, può rilasciare la luce contenuta nella gemma, facendole emettere luce intensa in un raggio di 9 metri e luce fioca in un raggio di 18 metri. Dopo 24 ore, una gemma modificata in questo modo, perde le sue proprietà e ritorna normale.
+
+\subsubsection{Istruzione}
+Il Sapiente ha dedicato una significativa parte dei suoi studi alla didattica. Alla fine di un riposo lungo può insegnare a una creatura in grado di sentirlo una competenza o un linguaggio che egli conosce. Fino alla fine di un nuovo riposo lungo del Sapiente, la creatura ottiene quella competenza.
+
+\subsubsection{Linguistica}
+Il Sapiente impara a parlare, leggere e scrivere un numero di lingue pari al proprio modificatore di intelligenza.\\
+Quando compie un tiro su Carisma (Persuasione) parlando a una creatura nella sua lingua madre (a patto che sia diversa dal Comune), ha vantaggio nel tiro.
+
+\subsubsection{Maestria in abilità}
+Il Sapiente ha speso un significativo ammontare di tempo, e un importante sforzo nella ricerca su una singola abilità. Sceglie un'abilità in cui ha competenza, e ogni volta che fa una prova di caratteristica che richieda l'abilità o l'oggetto scelti può trattare un tiro di 7 o inferiore sul d20 come un 8.\\
+È possibile ottenere questo Ambito di Ricerca più di una volta ma scegliendo ogni volta una competenza differente.
+
+\subsubsection{Meditazione}
+Il Sapiente spende ogni giorno del tempo a riflettere per schiarirsi la mente e mantenerla lucida. Ogni volta lancia il proprio Dado Intelletto e ottiene un 1, può ritirarlo finché non ottiene un risultato più alto di 1.\\
+Può ottenere questo Ambito di Ricerca al più tre volte, aumentando ogni volta il numero che può ritirare: la seconda volta ritira 1 e 2 mentre la terza 1, 2 e 3.
+
+\subsubsection{Memoria Infallibile}
+Il Sapiente può ricordare alla perfezione i dettagli di ciò che decide di memorizzare. Se spende almeno un minuto ad osservare un oggetto o una creatura, potrà raddoppiare il suo bonus di competenza sui tiri di Intelligenza (Storia) per ricordare un'informazione che ha osservato su di esso.
+
+\subsubsection{Musica}
+Il Sapiente ha un fine orecchio musiocale. Ottiene competenza in Intrattenere e in tre strumenti musicali a scelta. Ogni volta compie una prova di Carisma (Intrattenere) o una prova di caratteristica che usa uno strumento in cui il Sapiente ha competenza, ottiene un bonus al tiro pari al proprio modificatore di intelligenza.
+
+\subsubsection{Navigazione}
+Il Sapiente ottiene competenza negli strumenti da cartografo e da navigatore e  nei veicoli (acqua). Ogni volta egli compia un prova di abilità con questi strumenti, usa sempre il proprio punteggio di intelligenza e può aggiungere il doppio del suo bonus competenza al proprio tiro.\\
+Inoltre, finché ha una mappa (purchè essa sia accurata) o può vedere il cielo (purchè esso sia sensato e accurato rispetto alla sua esperienza), non può perdersi neanche attraverso la magia.
+
+\subsubsection{Scherma}
+Il Sapiente ottiene competenza in spade lunghe, stocchi e scimitarre.\\
+Quando una creatura che può vedere compie un attacco con un'arma da mischia contro il Sapiente, questi può usare la sua reazione per lanciare il proprio Dado Intelletto e aggiungere il suo risultato alla propria Classe Armatura contro quell'attacco. Se l'attacco manca, il Sapiente può contrattaccare con una spada lunga, uno stocco o una scimitarra come parte della stessa reazione.
+
+\subsubsection{Teologia}
+Il Sapiente è un devoto studente del divino. Impara a parlare, leggere e scrivere il Celestiale e ottiene competenza in Religione.\\
+Ogni volta che compie una prova di Intelligenza (Religione) per ricordarsi di devozioni religiose, rituali o costumi, o un tiro su Carisma per interagire con un Celestiale o un altro servo del Divino, ha vantaggio nel tiro.
+
+\subsubsection{Tiratore Scelto}
+Il Sapiente ottiene competenza in ogni arma marziale a distanza. Quando compie un attacco a distanza con un'arma, può usare il proprio Dado Intelletto al posto del dado utilizzato dall'arma per i danni.\\
+Inoltre, se l'ambientazione include armi da fuoco, e il Sapiente è stato esposto alla tecnologia che le fa funzionare, è considerato competente in tutte le armi da fuoco semplici e marziali.
+
+\subsubsection{Tradizioni}
+Il Sapiente è uno studente di cultura, politica e tradizioni. Quando fa una prova di  Intelligenza (Storia) relativamente a costumi locali, cultura o tradizione, ha vantaggio nel tiro. \\
+Questa eclettica conoscenza dei costumi e delle tradizioni locali lo rende inoltre un eccellente ambasciatore: quando incontra un leader o un'importante figura locale, ha vantaggio in ogni tiro su Carisma che gli viene richiesto.
