Update date and byte size in Guida.log and Guida.pdf, and fix a typo in Sapiente.tex

--- a/data/Personaggi/Sapiente.tex
+++ b/data/Personaggi/Sapiente.tex
@@ -143,7 +143,7 @@ Il Sapiente realizza il proprio vero potenziale di genio. Al 20° livello, il su
 
 \subsubsection{Agricoltura}
 Il Sapiente ha un grande interesse in tutto ciò che cresce. Ogni volta che fa una prova di Intelligenza (Natura) relativamente a piante, fattorie, agricoltura, o giardinaggio, ha vantaggio in quel tiro. \\
-Inoltre, se spende 8 ore a prendersi cura di colture, piante o campi, la versione di 8 ore dell'incantesimo \textit{Crescita Vegetale} ha effetto su ogni coltura egli decida di accudire in quel periodo.
+Inoltre, se spende 8 ore a prendersi cura di colture, piante o campi, può lanciare la versione di 8 ore dell'incantesimo \textit{Crescita Vegetale} su ogni coltura egli decida di accudire in quel periodo.
 
 \subsubsection{Astrologia}
 Il Sapiente è un esperto studioso delle mappe stellari e delle costellazioni, e può usare i movimenti dei corpi celesti per prevedere il futuro. Durante un riposo lungo in cui può vedere il cielo, può tirare un d20 e annotarne il valore. Può rimpiazzare un suo tiro per colpire, un suo tiro salvezza o una sua prova di abilità a sua scelta con questo valore, prima di aver effettuato tale tiro.\\
