Fix typos and update PDF files

--- a/data/Personaggi/Chierico.tex
+++ b/data/Personaggi/Chierico.tex
@@ -22,9 +22,9 @@
 
 \subsection{Competenze bonus}
 
-Al 1° livello, il Chierico ottiene competenza nelle seguenti abilità: Arcano e Intuizione. \\ Quando effettua una prova di caratteristica su queste abilità raddoppia il suo modificatore di competenza.
+Al 1° livello, il Chierico ottiene competenza nelle seguenti abilità: Arcano e Intuizione. \\ Quando effettua una prova di caratteristica su queste abilità raddoppia il suo bonus di competenza.
 
-\subsection{Forza bruta}
+\subsection{Forza brutta}
 
 A partire dal 1° livello, il Chierico può scegliere di usare il suo modificatore di Intelligenza invece che di Saggezza per ogni prova di caratteristica, tiro per colpire o tiro salvezza che lo richieda.\\ Allo stesso modo, la sua caratteristica da incantatore diventa Intelligenza.
 
@@ -34,7 +34,7 @@ A partire dal 2° livello il Chierico può spendere un suo utilizzo di \textit{i
 
 \subsection{Incanalare Divinità: Permutazione}
 
-A partire dal 6° livello il Chierico può spendere un suo utilizzo di \textit{incanalare divinità} per scegliere un numero di creature pari o inferiore al suo livello da Chierico (almeno 2) di cui conosca le posizioni e permutarle a suo piacimento. \\ Se una creatura viene permutata in uno spazio che non può occupare, viene automaticamente teletrasportata nello spazio sicuro che possa occupare più vicino.
+A partire dal 6° livello il Chierico può spendere un suo utilizzo di \textit{incanalare divinità} per scegliere un numero di creature pari o inferiore al suo livello da Chierico (almeno 2) entro 9 metri di cui conosca le posizioni e permutarle a suo piacimento. \\ Se una creatura viene permutata in uno spazio che non può occupare, viene automaticamente teletrasportata nello spazio sicuro che possa occupare più vicino.
 
 \subsection{Buon ordinamento}
 
