--- a/data/Personaggi/Sapiente.tex
+++ b/data/Personaggi/Sapiente.tex
@@ -146,7 +146,7 @@ Il Sapiente ha un grande interesse in tutto ciò che cresce. Ogni volta che fa u
 Inoltre, se spende 8 ore a prendersi cura di colture, piante o campi, può lanciare la versione di 8 ore dell'incantesimo \textit{Crescita Vegetale} su ogni coltura egli decida di accudire in quel periodo.
 
 \subsubsection{Astrologia}
-Il Sapiente è un esperto studioso delle mappe stellari e delle costellazioni, e può usare i movimenti dei corpi celesti per prevedere il futuro. Durante un riposo lungo in cui può vedere il cielo, può tirare un d20 e annotarne il valore. Può rimpiazzare un suo tiro per colpire, un suo tiro salvezza o una sua prova di abilità a sua scelta con questo valore, prima di aver effettuato tale tiro.\\
+Il Sapiente è un esperto studioso delle mappe stellari e delle costellazioni, e può usare i movimenti dei corpi celesti per prevedere il futuro. Durante un riposo lungo in cui può vedere il cielo stellato, può tirare un d20 e annotarne il valore. Può rimpiazzare un suo tiro per colpire, un suo tiro salvezza o una sua prova di abilità a sua scelta con questo valore, prima di aver effettuato tale tiro.\\
 La sostituzione può essere effettuata al massimo una volta, e se non viene utilizzata entro la fine del riposo lungo successivo, è persa.
 
 \subsubsection{Enigmi}
@@ -165,7 +165,8 @@ Se il Falco scende a 0 punti ferita, compie i tiri salvezza contro morte come fa
 
 \subsubsection{Gioielliere}
 Il Sapiente è un apprendista orafo. Ottiene competenza in due strumenti da gioielliere, e il suo bonus di competenza raddoppia ai fini di ogni tiro che li utilizzi.\\
-Inoltre, quando è alla luce del sole, può spendere un''ora usando strumenti da gioielliere per modificare  una gemma che egli possa toccare in modo che assorba la luce solare.\\ Come azione, può rilasciare la luce contenuta nella gemma, facendole emettere luce intensa in un raggio di 9 metri e luce fioca in un raggio di 18 metri. Dopo 24 ore, una gemma modificata in questo modo, perde le sue proprietà e ritorna normale.
+Inoltre, quando è alla luce del sole, può spendere un''ora usando strumenti da gioielliere per modificare  una gemma che egli possa toccare in modo che assorba la luce solare.\\ 
+Come azione, può rilasciare la luce contenuta nella gemma, facendole emettere luce intensa in un raggio di 9 metri e luce fioca in un raggio di 18 metri. Dopo 24 ore, una gemma modificata in questo modo, perde le sue proprietà e ritorna normale.
 
 \subsubsection{Istruzione}
 Il Sapiente ha dedicato una significativa parte dei suoi studi alla didattica. Alla fine di un riposo lungo può insegnare a una creatura in grado di sentirlo una competenza o un linguaggio che egli conosce. Fino alla fine di un nuovo riposo lungo del Sapiente, la creatura ottiene quella competenza.
@@ -186,11 +187,11 @@ Può ottenere questo Ambito di Ricerca al più tre volte, aumentando ogni volta 
 Il Sapiente può ricordare alla perfezione i dettagli di ciò che decide di memorizzare. Se spende almeno un minuto ad osservare un oggetto o una creatura, potrà raddoppiare il suo bonus di competenza sui tiri di Intelligenza (Storia) per ricordare un'informazione che ha osservato su di esso.
 
 \subsubsection{Musica}
-Il Sapiente ha un fine orecchio musiocale. Ottiene competenza in Intrattenere e in tre strumenti musicali a scelta. Ogni volta compie una prova di Carisma (Intrattenere) o una prova di caratteristica che usa uno strumento in cui il Sapiente ha competenza, ottiene un bonus al tiro pari al proprio modificatore di intelligenza.
+Il Sapiente ha un fine orecchio musicale. Ottiene competenza in Intrattenere e in tre strumenti musicali a scelta. Ogni volta compie una prova di Carisma (Intrattenere) o una prova di caratteristica che usa uno strumento in cui il Sapiente ha competenza, ottiene un bonus al tiro pari al proprio modificatore di intelligenza.
 
 \subsubsection{Navigazione}
 Il Sapiente ottiene competenza negli strumenti da cartografo e da navigatore e  nei veicoli (acqua). Ogni volta egli compia un prova di abilità con questi strumenti, usa sempre il proprio punteggio di intelligenza e può aggiungere il doppio del suo bonus competenza al proprio tiro.\\
-Inoltre, finché ha una mappa (purchè essa sia accurata) o può vedere il cielo (purchè esso sia sensato e accurato rispetto alla sua esperienza), non può perdersi neanche attraverso la magia.
+Inoltre, finché ha una mappa (purchè essa sia accurata) o può vedere il cielo stellato (purchè esso sia sensato e accurato rispetto alla sua esperienza), non può perdersi neanche attraverso la magia.
 
 \subsubsection{Scherma}
 Il Sapiente ottiene competenza in spade lunghe, stocchi e scimitarre.\\
