--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -15,20 +15,11 @@ La magia di uno Stregone è istintiva, deriva dal suo talento e dalle sue emozio
 
 Il numero massimo di punti stregoneria di uno Stregone è pari al suo livello da Stregone + il suo bonus di competenza
 
-\subsection{Opzioni di metamagia}
-Innanzitutto, si possono usare più opzioni di metamagia nello stesso turno a meno che non specifichino esse stesse un costo in azioni et cetera.
-
-\subsubsection{Incantesimo reattivo}
-Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore (anche lanciato a livello più alto) come reazione ma durante il suo turno. Questa opzione può essere usata solo una volta per round.
-
-\subsubsection{Incantesimo leggendario}
-Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore (anche lanciato a livello più alto) come azione leggendaria (ovvero in qualsiasi momento del round). Questa opzione può essere usata solo una volta per round.
-
 \section{Origine Stregonesca: Dinastia di Analisti}
 
 \begin{DndReadAloud}
   \it
-  "\begin{math}f(x)\end{math} \ è suriettiva se whoop whoop, whooooooop!" \\ (A. Defranceschi)
+  "Vi siete dopati per l'occasione di oggi? No? Avreste dovuto." \\ (S. Delladio)
 \end{DndReadAloud}
 
 \DndDropCapLine{L}{}'Analisi Matematica anche a livelli tutto sommato superficiali richiede la visualizzazione di concetti che i più potrebbero ritenere... psichedelici. \\ \begin{math} \mathbb{R}^7, \mathbb{C}^2\end{math}, spazi misurabili, aperti, chiusi, tutte strutture che una mente umana fatica a concepire. \\ Accadde che un giorno un'Analista particolarmente dedita alla sua disciplina fece ricorso ad un... \textit{aiutino druidico} per visualizzare certi concetti, ma purtroppo non sapeva di stare aspettando un figlio... Dopo qualche anno, fu estremamente sorpresa dalle doti di questo bambino, capace di oltrepassare senza problemi (... più o meno) i limiti della mente umana.
